src/objects/TRAK_Test_Template_History__c.object
<CustomObject>
    <description>Child object for Test Script object to maintain audit trail of Approvals: Created by Preeti Grover on 1/08/2014</description>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>date when the test script was approved</description>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Status of approval request:  Created by Preeti Grover on 01/08/2014: TRAK</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Allocated_time_in_Days__c</fullName>
        <formula>ROUND(IF( NOT(ISBLANK(Approval_Date__c))  , (  Approval_Date__c  - CreatedDate ) ,(NOW() - CreatedDate )),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Allocated time in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the approver for this Test Script: Created by Preeti Grover on 01/08/2014: TRAK</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Scripts_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Script__c</fullName>
        <description>Detail relationship with Test Script: Created by Preeti Grover on 01/08/2014:TRAK</description>
        <label>Test Script</label>
        <referenceTo>TRAK_Test_Templates__c</referenceTo>
        <relationshipLabel>Test Scripts History</relationshipLabel>
        <relationshipName>Test_Scripts_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Script History</label>
    <nameField>
        <displayFormat>TSA-{0000}</displayFormat>
        <label>Test Script History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scripts History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>